--- a/default.html
+++ b/default.html
@@ -3,8 +3,8 @@
 <link rel="stylesheet" href="something.css">
 <link rel="stylesheet" href="colors.css">
 <header>
-<a href="///G:/jake.html"><h1>HOME</h1></a>
-<a href="///G:/index.html"><h1>MORE</h1></a>
+<a href="jake.html"><h1>HOME</h1></a>
+<a href="index.html"><h1>MORE</h1></a>
 
 </header>
 </head>
