--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <link rel="stylesheet" href="colors.css">
 <link rel="stylesheet" href="something.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-<a href="///G:/jake.html"><h1>HOME</h1></a>
-<a href="///G:/default.html"><h1>MORE</h1></a>
+<a href="jake.html"><h1>HOME</h1></a>
+<a href="default.html"><h1>MORE</h1></a>
 <p align="center"><img src="bigdipperl.jpeg" width="400" height"400"></p>
 <header>
 
