--- a/jake.html
+++ b/jake.html
@@ -37,7 +37,7 @@
 
 
 <footer>
-	<a href="///G:/about.html">Click Me To Go To Another Website Made By The Same Person!</a>
+	<a href="about.html">Click Me To Go To Another Website Made By The Same Person!</a>
 	<a href="https://www.youtube.com">Click To Go Youtube</a>
 </footer>
 </body>
