--- a/jake.html
+++ b/jake.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="something.css">
 
 <header>
-<a href="index.html"><h1>INDEX</h1></a>
+<a href="index.html"><h1>MORE</h1></a>
 <a href="default.html"><h1>MORE</h1></a>
 <a href="forms.html"><h1>LOGIN</h1></a>
 </header>
