--- a/flipperdipper.html
+++ b/flipperdipper.html
@@ -40,7 +40,7 @@ var g2 = Math.round(istep * c1_0[1] + step * c1_1[1]);
 var b2 = Math.round(istep * c1_0[2] + step * c1_1[2]);
 var color2 = "rgb("+r2+","+g2+","+b2+")";
 
- $('#gradient').css({
+ $('.gradient').css({
    background: "-webkit-gradient(linear, left top, right top, from("+color1+"), to("+color2+"))"}).css({
     background: "-moz-linear-gradient(left, "+color1+" 0%, "+color2+" 100%)"});
   
@@ -63,7 +63,7 @@ setInterval(updateGradient,10);
 
 </script>
 
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.02/jquery.min.js""></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 <head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link rel="stylesheet" href="gradient.css">
@@ -72,7 +72,8 @@ setInterval(updateGradient,10);
 
 
 <body>
-<div id="gradient">
+<div class="gradient">
+</div>
 
 </body>
 
