--- a/jake.html
+++ b/jake.html
@@ -71,7 +71,7 @@ setInterval(updateGradient,10);
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 
 <header>
-<a href="index.html"><h1>MORE</h1></a>
+<a href="index.html"><h1>INDEX</h1></a>
 <a href="default.html"><h1>MORE</h1></a>
 <a href="forms.html"><h1>LOGIN</h1></a>
 <a href="flipperdipper.html"><h1>EVEN MORE</h1></a>
