--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 <head>
 <link rel="stylesheet" href="colors.css">
 <link rel="stylesheet" href="something.css">
@@ -9,9 +10,11 @@
 <header>
 
 </header>
+<script src="gradient.js"></script>
 </head>
 
 <body>
+
 
 <a href="https://www.nasa.gov"><strong>Go To Nasa's Website</strong></a>
 <p>Check out Nasa's website for even more cool space facts!
